# cbct2ct2_5D

./: .claudeignore  .gitignore  README.md  eval_full.py  eval_vqvae.py  hu_analysis.py  main.py  pyproject.toml  requirements.txt  run_stage1_64.sh  run_stage1_ablation.sh  run_stage1_full.sh  run_stage2_ablation.sh  run_stage2_full.sh  stage1_full.py  stage1_vqvae.py  stage2_full.py  stage2_vdm.py  ttest_analysis.py
data/: dataset.py  preprocess.py  preprocessed_dataset.py  synthrad2025.py  verify_preprocessed.py
docs/superpowers/plans/: 2026-04-30-eval-full.md  2026-05-02-cyclegan-baseline.md
docs/superpowers/specs/: 2026-04-30-eval-full-design.md  2026-05-02-cyclegan-baseline-design.md
eval/: best_case_analysis.py  eval_full.py  eval_gen.py  eval_gen_cyclegan.py  fn_fp_analysis.py  hu_analysis.py  visualize_cyclegan.py
models/cyclegan/: discriminator.py  generator.py
models/lvdm/: uvit.py  vdm.py
runs/: rename.sh  run_cyclegan.sh  run_eval_full.sh  run_stage1_64.sh  run_stage1_ablation.sh  run_stage2_ablation.sh
scripts/: compare_vqvae_params.py  inspect_latent_dist.py
tests/: test_cyclegan_models.py  test_eval_full.py
train/: cyclegan.py  stage1_vqvae.py  stage2_vdm.py
utils/: hu.py  inception.py  mha.py  wandb.py
