[project]
name = "cbct2ct2-5d"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "einops>=0.8.2",
    "gitpython>=3.1.46",
    "huggingface-hub>=1.10.2",
    "lpips>=0.1.4",
    "monai>=1.5.2",
    "numpy>=2.2.6",
    "pillow>=12.1.1",
    "protobuf>=7.34.1",
    "pydantic>=2.13.1",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "safetensors>=0.7.0",
    "simpleitk>=2.5.3",
    "torch>=2.6.0",
    "torchaudio>=2.11.0",
    "torcheval>=0.0.7",
    "torchinfo>=1.8.0",
    "torchvision>=0.21.0",
    "tqdm>=4.66.5",
    "wandb>=0.26.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu126"
